# wcl

./: .gitattributes  .gitignore  .nexus.wcl  CLAUDE.md  Cargo.toml  LICENSE  README.md  WCL_SPECIFICATION.md  justfile  test.wcl  wrangler.toml
.just/: build.just  (+6 more)
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/wcl/: __init__.py  _callback.py  _convert.py  _types.py  _wasm_runtime.py  wcl_wasm.wasm
bindings/python/src/: convert.rs  lib.rs  types.rs
bindings/python/tests/: conftest.py  test_blocks.py  test_diagnostics.py  test_functions.py  test_language_features.py  test_library.py  test_parse.py  test_schema.py  test_tables.py  test_variables.py
bindings/wasm/: Cargo.toml  README.md  package.json
bindings/wasm/js/: index.cjs  index.mjs  wcl.d.ts
bindings/wasm/src/: lib.rs
bindings/wasm/src/js/: convert.rs  fs.rs  mod.rs
bindings/wasm/src/wasi/: callback.rs  mod.rs  registry.rs
bindings/wasm/tests/: parse.rs
crates/wcl/: Cargo.toml  README.md
crates/wcl/benches/: e2e.rs
crates/wcl/src/: json.rs  lib.rs  library.rs
crates/wcl/src/cli/: add.rs  convert.rs  docs.rs  eval.rs  fmt.rs  inspect.rs  mod.rs  mutation.rs  path.rs  query.rs  remove.rs  set.rs  table.rs  transform.rs  validate.rs  vars.rs  wdoc.rs
crates/wcl/src/eval/: control_flow.rs  evaluator.rs  functions.rs  imports.rs  macros.rs  merge.rs  mod.rs  namespaces.rs  query.rs  scope.rs  value.rs
crates/wcl/src/lang/: ast.rs  lexer.rs
crates/wcl/src/lang/parser/: expr.rs  mod.rs  types.rs
crates/wcl/src/lsp/: analysis.rs  ast_utils.rs  completion.rs  convert.rs  definition.rs  diagnostics.rs  fmt_impl.rs  formatting.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  state.rs  symbols.rs
crates/wcl/src/schema/: decorator.rs  document.rs  id.rs  mod.rs  schema.rs  struct_registry.rs  table.rs  types.rs
crates/wcl/src/serde_impl/: de.rs  mod.rs  ser.rs
crates/wcl/src/transform/: accumulator.rs  error.rs  mapper.rs  mod.rs
crates/wcl/src/transform/codec/: binary_codec.rs  csv_codec.rs  hcl_codec.rs  json.rs  mod.rs  msgpack.rs  text_codec.rs  xml.rs
crates/wcl/src/transform/layout/: mod.rs
crates/wcl/src/transform/pipeline/: mod.rs
crates/wcl/src/transform/state/: memory.rs  mod.rs
crates/wcl/src/transform/struct_parser/: binary.rs  mod.rs
crates/wcl/tests/: cli_e2e.rs  cli_integration.rs  schema_integration.rs
crates/wcl_cli/: Cargo.toml
crates/wcl_cli/src/: add.rs  convert.rs  docs.rs  eval.rs  fmt.rs  inspect.rs  main.rs  path.rs  query.rs  remove.rs  set.rs  table.rs  validate.rs  vars.rs
crates/wcl_cli/tests/: cli_integration.rs
crates/wcl_core/: Cargo.toml
crates/wcl_core/benches/: lexer.rs  parser.rs
crates/wcl_core/src/: ast.rs  lexer.rs  lib.rs
crates/wcl_core/src/parser/: expr.rs  mod.rs  types.rs
crates/wcl_core/tests/: integration.rs
crates/wcl_derive/: Cargo.toml
crates/wcl_derive/src/: lib.rs
crates/wcl_eval/: Cargo.toml
crates/wcl_eval/benches/: eval.rs
crates/wcl_eval/src/: control_flow.rs  evaluator.rs  functions.rs  imports.rs  lib.rs  macros.rs  merge.rs  query.rs  scope.rs  value.rs
crates/wcl_eval/tests/: integration.rs
crates/wcl_ffi/: CMakeLists.txt  Cargo.toml  build.rs
crates/wcl_ffi/src/: callback.rs  convert.rs  lib.rs
crates/wcl_lang/: Cargo.toml
crates/wcl_lang/src/: fmt.rs  fmt_value.rs  lib.rs  library.rs
crates/wcl_lang/src/eval/: auto_id.rs  control_flow.rs  evaluator.rs  imports.rs  mod.rs  namespaces.rs  query.rs  scope.rs  value.rs
crates/wcl_lang/src/lang/: ast.rs  diagnostic.rs  lexer.rs  mod.rs  trivia.rs
crates/wcl_lang/src/lang/parser/: expr.rs  mod.rs
crates/wcl_lang/src/schema/: decorator.rs  id.rs  layout_registry.rs  schema.rs
crates/wcl_lang/src/serde_impl/: de.rs  ser.rs
crates/wcl_lang/src/transform/: event.rs
crates/wcl_lang/src/transform/codec/: toml_codec.rs  yaml.rs
crates/wcl_lsp/: Cargo.toml
crates/wcl_lsp/src/: analysis.rs  ast_utils.rs  completion.rs  convert.rs  definition.rs  diagnostics.rs  fmt_impl.rs  formatting.rs  hover.rs  lib.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  state.rs  symbols.rs
crates/wcl_schema/: Cargo.toml
crates/wcl_schema/src/: decorator.rs  document.rs  id.rs  lib.rs  schema.rs  table.rs  types.rs
crates/wcl_schema/tests/: integration.rs
crates/wcl_serde/: Cargo.toml
crates/wcl_serde/src/: de.rs  error.rs  lib.rs  ser.rs
crates/wcl_serde/tests/: integration.rs
crates/wcl_wdoc/: Cargo.toml
crates/wcl_wdoc/src/: graph_layout.rs  lib.rs  library.rs  model.rs  serve.rs  shapes.rs  templates.rs  validate.rs  wdoc.wcl  widgets.rs
crates/wcl_wdoc/src/render/: assets.rs  content.rs  layout.rs  mod.rs  page.rs
extras/tree-sitter-wcl/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
extras/tree-sitter-wcl/bindings/c/: tree-sitter-wcl.pc.in
extras/tree-sitter-wcl/bindings/go/: binding.go  binding_test.go
extras/tree-sitter-wcl/bindings/node/: binding.cc  index.d.ts  index.js
extras/tree-sitter-wcl/bindings/rust/: build.rs  lib.rs
extras/tree-sitter-wcl/bindings/zig/: build.zig  build.zig.zon
extras/tree-sitter-wcl/queries/: highlights.scm
extras/tree-sitter-wcl/src/: grammar.json  node-types.json  parser.c  scanner.c
extras/tree-sitter-wcl/test/corpus/: advanced.txt  blocks.txt  expressions.txt  heredocs.txt  literals.txt  statements.txt  symbols.txt  types.txt
wcl_cli/: Cargo.toml
wcl_cli/src/: add.rs  convert.rs  eval.rs  fmt.rs  inspect.rs  main.rs  path.rs  query.rs  remove.rs  set.rs  validate.rs
wcl_cli/tests/: cli_integration.rs  integration.rs
wcl_eval/: Cargo.toml
wcl_eval/src/: control_flow.rs  evaluator.rs  functions.rs  imports.rs  lib.rs  macros.rs  merge.rs  query.rs  scope.rs  value.rs
wcl_eval/tests/: integration.rs
wcl_wasm/: Cargo.toml  package.json
wcl_wasm/js/: index.mjs  wcl.d.ts
wcl_wasm/src/: convert.rs  fs.rs  lib.rs
wcl_wasm/tests/: parse.rs
(+732 files in other folders)
