[workspace]
resolver = "2"
exclude = ["extras/tree-sitter-wcl"]
members = [
    "crates/wcl_core",
    "crates/wcl_eval",
    "crates/wcl_schema",
    "crates/wcl_serde",
    "crates/wcl_derive",
    "crates/wcl_lsp",
    "crates/wcl_cli",
    "crates/wcl",
    "crates/wcl_ffi",
    "bindings/wasm",
]

[workspace.package]
version = "0.0.0-local"
license = "MIT"
homepage = "https://wcl.dev"
documentation = "https://wcl.dev/docs"
repository = "https://github.com/wiltaylor/wcl"

[workspace.dependencies]
# Internal crates
wcl = { path = "crates/wcl", version = "0.0.0-local" }
wcl_core = { path = "crates/wcl_core", version = "0.0.0-local" }
wcl_eval = { path = "crates/wcl_eval", version = "0.0.0-local" }
wcl_schema = { path = "crates/wcl_schema", version = "0.0.0-local" }
wcl_serde = { path = "crates/wcl_serde", version = "0.0.0-local" }
wcl_derive = { path = "crates/wcl_derive", version = "0.0.0-local" }

# LSP crate
wcl_lsp = { path = "crates/wcl_lsp", version = "0.0.0-local" }

# External deps
nom = "8"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Optimise release builds (benefits WASM size via wasm-pack)
[profile.release]
lto = true
codegen-units = 1
strip = true
