[package]
name = "wcl_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wcl"
path = "src/main.rs"

[dependencies]
wcl = { path = "../wcl" }
wcl_core = { workspace = true }
wcl_eval = { workspace = true }
wcl_schema = { workspace = true }
wcl_serde = { workspace = true }
wcl_lsp = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
