[package]
name = "wcl_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for WCL (Wil's Configuration Language)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wcl = { path = "../wcl" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
indexmap = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
