[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "pywcl"
version = "0.1.0"
requires-python = ">=3.9"

[tool.maturin]
python-source = "python"
module-name = "wcl._wcl_native"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["pytest>=8", "maturin>=1.7"]
