[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywcl"
version = "0.0.0.dev0"
requires-python = ">=3.9"
dependencies = ["wasmtime>=29"]
readme = "README.md"
license = {text = "MIT"}

[tool.hatch.build.targets.sdist.force-include]
"python/wcl/wcl_wasm.wasm" = "python/wcl/wcl_wasm.wasm"

[tool.hatch.build.targets.wheel]
packages = ["python/wcl"]

[tool.hatch.build.targets.wheel.force-include]
"python/wcl/wcl_wasm.wasm" = "wcl/wcl_wasm.wasm"

[dependency-groups]
dev = ["pytest>=8"]
