[package]
name = "wcl_wasm"
version.workspace = true
edition = "2021"
license.workspace = true
description = "WebAssembly bindings for WCL (Wil's Configuration Language)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["js"]
js = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
wasi = ["wcl/json", "serde_json"]

[dependencies]
wcl = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { workspace = true, optional = true }
indexmap = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Disabled: bundled wasm-opt is incompatible with LTO output from newer Rust.
# Install a recent system wasm-opt and remove this to re-enable.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
