[package]
name = "wcl"
version.workspace = true
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "WCL (Wil's Configuration Language) — a typed, block-structured configuration language"
readme = "README.md"

[[bin]]
name = "wcl"
path = "src/bin/wcl.rs"

[dependencies]
# Core deps
nom = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

# Eval deps
regex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
glob = { workspace = true }

# Shared deps
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# LSP deps
tower-lsp = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
ropey = { workspace = true }

# CLI deps
clap = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "e2e"
harness = false
