[package]
name = "wcl"
version.workspace = true
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "WCL (Wil's Configuration Language) — a typed, block-structured configuration language"
readme = "README.md"

[[bin]]
name = "wcl"
path = "src/bin/wcl.rs"

[dependencies]
# Language library
wcl_lang = { workspace = true }

# Shared deps (used directly by CLI)
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Codec deps (used by CLI convert/eval commands)
serde_yaml_ng = "0.10"
toml = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Wdoc
wcl_wdoc = { workspace = true }

# LSP
wcl_lsp = { workspace = true }

# CLI deps
clap = { workspace = true }
tokio = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "e2e"
harness = false
