[package]
name = "wcl_cli"
version.workspace = true
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Command-line interface for WCL (Wil's Configuration Language)"

[[bin]]
name = "wcl"
path = "src/main.rs"

[dependencies]
wcl = { workspace = true, features = ["json"] }
wcl_core = { workspace = true }
wcl_eval = { workspace = true }
wcl_schema = { workspace = true }
wcl_serde = { workspace = true }
wcl_lsp = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
