[package]
name = "wcl_core"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false
