[package]
name = "wcl_core"
version = "0.1.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Core AST, lexer, and parser for WCL (Wil's Configuration Language)"

[dependencies]
nom = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false
