[package]
name = "wcl_eval"
version = "0.1.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Evaluator, macros, and query engine for WCL (Wil's Configuration Language)"

[dependencies]
wcl_core = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "eval"
harness = false
