[package]
name = "wcl_ffi"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "C FFI bindings for WCL (Wil's Configuration Language)"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
wcl = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
