[package]
name = "wcl_schema"
version = "0.1.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Schema validation for WCL (Wil's Configuration Language)"

[dependencies]
wcl_core = { workspace = true }
wcl_eval = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
