[package]
name = "wcl_serde"
version.workspace = true
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Serde integration for WCL (Wil's Configuration Language)"

[dependencies]
wcl_core = { workspace = true }
wcl_eval = { workspace = true }
wcl_schema = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
