[package]
name = "wcl_wdoc"
version.workspace = true
edition = "2021"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "WCL documentation format — build structured docs with WCL, render to HTML"

[dependencies]
indexmap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Dev server
axum = "0.8"
notify = "8"
tower-http = { version = "0.6", features = ["fs"] }
futures-core = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
