[package]
name = "tree-sitter-wcl"
description = "Tree-sitter grammar for WCL (Wil's Configuration Language)"
version = "0.0.0-local"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "wcl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/wiltaylor/wcl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.7"
